--- a/Instructions/Starter_Code/venture_funding_with_deep_learning.ipynb
+++ b/Instructions/Starter_Code/venture_funding_with_deep_learning.ipynb
@@ -1519,22 +1519,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compile the Sequential model\n",
-    "# YOUR CODE HERE\n"
+    "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "804/804 [==============================] - 1s 683us/step - loss: 0.5761 - accuracy: 0.7208\n",
+      "Epoch 2/50\n",
+      "804/804 [==============================] - 1s 662us/step - loss: 0.5534 - accuracy: 0.7297\n",
+      "Epoch 3/50\n",
+      "804/804 [==============================] - 1s 668us/step - loss: 0.5500 - accuracy: 0.7308\n",
+      "Epoch 4/50\n",
+      "804/804 [==============================] - 1s 656us/step - loss: 0.5479 - accuracy: 0.7315\n",
+      "Epoch 5/50\n",
+      "804/804 [==============================] - 1s 655us/step - loss: 0.5463 - accuracy: 0.7330\n",
+      "Epoch 6/50\n",
+      "804/804 [==============================] - 1s 659us/step - loss: 0.5458 - accuracy: 0.7331\n",
+      "Epoch 7/50\n",
+      "804/804 [==============================] - 1s 659us/step - loss: 0.5437 - accuracy: 0.7343\n",
+      "Epoch 8/50\n",
+      "804/804 [==============================] - 1s 658us/step - loss: 0.5436 - accuracy: 0.7336\n",
+      "Epoch 9/50\n",
+      "804/804 [==============================] - 1s 665us/step - loss: 0.5430 - accuracy: 0.7350\n",
+      "Epoch 10/50\n",
+      "804/804 [==============================] - 1s 658us/step - loss: 0.5427 - accuracy: 0.7333\n",
+      "Epoch 11/50\n",
+      "804/804 [==============================] - 1s 670us/step - loss: 0.5407 - accuracy: 0.7350\n",
+      "Epoch 12/50\n",
+      "804/804 [==============================] - 1s 680us/step - loss: 0.5406 - accuracy: 0.7361\n",
+      "Epoch 13/50\n",
+      "804/804 [==============================] - 1s 701us/step - loss: 0.5407 - accuracy: 0.7356\n",
+      "Epoch 14/50\n",
+      "804/804 [==============================] - 1s 719us/step - loss: 0.5396 - accuracy: 0.7369\n",
+      "Epoch 15/50\n",
+      "804/804 [==============================] - 1s 727us/step - loss: 0.5395 - accuracy: 0.7362\n",
+      "Epoch 16/50\n",
+      "804/804 [==============================] - 1s 700us/step - loss: 0.5391 - accuracy: 0.7364\n",
+      "Epoch 17/50\n",
+      "804/804 [==============================] - 1s 664us/step - loss: 0.5384 - accuracy: 0.7387\n",
+      "Epoch 18/50\n",
+      "804/804 [==============================] - 1s 661us/step - loss: 0.5383 - accuracy: 0.7371\n",
+      "Epoch 19/50\n",
+      "804/804 [==============================] - 1s 676us/step - loss: 0.5373 - accuracy: 0.7379\n",
+      "Epoch 20/50\n",
+      "804/804 [==============================] - 1s 639us/step - loss: 0.5381 - accuracy: 0.7362\n",
+      "Epoch 21/50\n",
+      "804/804 [==============================] - 1s 645us/step - loss: 0.5373 - accuracy: 0.7377\n",
+      "Epoch 22/50\n",
+      "804/804 [==============================] - 1s 644us/step - loss: 0.5374 - accuracy: 0.7376\n",
+      "Epoch 23/50\n",
+      "804/804 [==============================] - 1s 654us/step - loss: 0.5370 - accuracy: 0.7372\n",
+      "Epoch 24/50\n",
+      "804/804 [==============================] - 1s 656us/step - loss: 0.5367 - accuracy: 0.7399\n",
+      "Epoch 25/50\n",
+      "804/804 [==============================] - 1s 643us/step - loss: 0.5365 - accuracy: 0.7391\n",
+      "Epoch 26/50\n",
+      "804/804 [==============================] - 1s 649us/step - loss: 0.5365 - accuracy: 0.7379\n",
+      "Epoch 27/50\n",
+      "804/804 [==============================] - 1s 645us/step - loss: 0.5356 - accuracy: 0.7397\n",
+      "Epoch 28/50\n",
+      "804/804 [==============================] - 1s 646us/step - loss: 0.5357 - accuracy: 0.7386\n",
+      "Epoch 29/50\n",
+      "804/804 [==============================] - 1s 699us/step - loss: 0.5351 - accuracy: 0.7391\n",
+      "Epoch 30/50\n",
+      "804/804 [==============================] - 1s 698us/step - loss: 0.5348 - accuracy: 0.7402\n",
+      "Epoch 31/50\n",
+      "804/804 [==============================] - 1s 715us/step - loss: 0.5344 - accuracy: 0.7391\n",
+      "Epoch 32/50\n",
+      "804/804 [==============================] - 1s 688us/step - loss: 0.5348 - accuracy: 0.7397\n",
+      "Epoch 33/50\n",
+      "804/804 [==============================] - 1s 661us/step - loss: 0.5347 - accuracy: 0.7403\n",
+      "Epoch 34/50\n",
+      "804/804 [==============================] - 1s 670us/step - loss: 0.5341 - accuracy: 0.7397\n",
+      "Epoch 35/50\n",
+      "804/804 [==============================] - 1s 651us/step - loss: 0.5339 - accuracy: 0.7388\n",
+      "Epoch 36/50\n",
+      "804/804 [==============================] - 1s 672us/step - loss: 0.5343 - accuracy: 0.7404\n",
+      "Epoch 37/50\n",
+      "804/804 [==============================] - 1s 656us/step - loss: 0.5340 - accuracy: 0.7398\n",
+      "Epoch 38/50\n",
+      "804/804 [==============================] - 1s 698us/step - loss: 0.5329 - accuracy: 0.7408\n",
+      "Epoch 39/50\n",
+      "804/804 [==============================] - 1s 649us/step - loss: 0.5336 - accuracy: 0.7400\n",
+      "Epoch 40/50\n",
+      "804/804 [==============================] - 1s 659us/step - loss: 0.5327 - accuracy: 0.7404\n",
+      "Epoch 41/50\n",
+      "804/804 [==============================] - 1s 646us/step - loss: 0.5327 - accuracy: 0.7414\n",
+      "Epoch 42/50\n",
+      "804/804 [==============================] - 1s 661us/step - loss: 0.5329 - accuracy: 0.7397\n",
+      "Epoch 43/50\n",
+      "804/804 [==============================] - 1s 650us/step - loss: 0.5325 - accuracy: 0.7404\n",
+      "Epoch 44/50\n",
+      "804/804 [==============================] - 1s 660us/step - loss: 0.5330 - accuracy: 0.7399\n",
+      "Epoch 45/50\n",
+      "804/804 [==============================] - 1s 679us/step - loss: 0.5325 - accuracy: 0.7410\n",
+      "Epoch 46/50\n",
+      "804/804 [==============================] - 1s 681us/step - loss: 0.5323 - accuracy: 0.7411\n",
+      "Epoch 47/50\n",
+      "804/804 [==============================] - 1s 674us/step - loss: 0.5320 - accuracy: 0.7400\n",
+      "Epoch 48/50\n",
+      "804/804 [==============================] - 1s 669us/step - loss: 0.5325 - accuracy: 0.7405\n",
+      "Epoch 49/50\n",
+      "804/804 [==============================] - 1s 668us/step - loss: 0.5319 - accuracy: 0.7418\n",
+      "Epoch 50/50\n",
+      "804/804 [==============================] - 1s 666us/step - loss: 0.5318 - accuracy: 0.7413\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit the model using 50 epochs and the training data\n",
-    "# YOUR CODE HERE\n"
+    "fit_model = nn.fit(X_train_scaled, y_train, epochs=50)\n"
    ]
   },
   {
@@ -1546,12 +1653,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "268/268 - 0s - loss: 0.5565 - accuracy: 0.7303 - 246ms/epoch - 918us/step\n",
+      "Loss: 0.5564708113670349, Accuracy: 0.7302623987197876\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the model loss and accuracy metrics using the evaluate method and the test data\n",
-    "model_loss, model_accuracy = # YOUR CODE HERE\n",
+    "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
     "\n",
     "# Display the model loss and accuracy results\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
@@ -1566,15 +1682,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the model's file path\n",
-    "file_path = # YOUR CODE HERE\n",
+    "file_path = Path(\"Resources/applicants_data.h5\")\n",
     "\n",
-    "# Export your model to a HDF5 file\n",
-    "# YOUR CODE HERE\n"
+    "# Export your model to an HDF5 file\n",
+    "nn.save(file_path)\n"
    ]
   },
   {
