--- a/Instructions/Starter_Code/venture_funding_with_deep_learning.ipynb
+++ b/Instructions/Starter_Code/venture_funding_with_deep_learning.ipynb
@@ -1730,9 +1730,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "116"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the the number of inputs (features) to the model\n",
     "number_input_features = len(X_train.iloc[0])\n",
@@ -1743,22 +1754,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the number of neurons in the output layer\n",
-    "number_output_neurons_A1 = # YOUR CODE HERE"
+    "number_output_neurons_A1 = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "58"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the number of hidden nodes for the first hidden layer\n",
-    "hidden_nodes_layer1_A1 = # YOUR CODE HERE\n",
+    "hidden_nodes_layer1_A1 = (number_input_features + 1) // 2\n",
     "\n",
     "# Review the number of hidden nodes in the first layer\n",
     "hidden_nodes_layer1_A1"
@@ -1766,50 +1788,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the Sequential model instance\n",
-    "nn_A1 = # YOUR CODE HERE"
+    "nn_A1 = Sequential()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_3 (Dense)             (None, 58)                6786      \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 1)                 59        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 6,845\n",
+      "Trainable params: 6,845\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# First hidden layer\n",
-    "# YOUR CODE HERE\n",
+    "nn_A1.add(Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"relu\"))\n",
     "\n",
     "\n",
     "# Output layer\n",
-    "# YOUR CODE HERE\n",
+    "nn_A1.add(Dense(units=1, activation=\"sigmoid\"))\n",
     "\n",
     "\n",
     "# Check the structure of the model\n",
-    "# YOUR CODE HERE"
+    "nn_A1.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compile the Sequential model\n",
-    "nn_A1.# YOUR CODE HERE\n"
+    "nn_A1.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "804/804 [==============================] - 1s 639us/step - loss: 0.5768 - accuracy: 0.7217\n",
+      "Epoch 2/50\n",
+      "804/804 [==============================] - 1s 654us/step - loss: 0.5571 - accuracy: 0.7303\n",
+      "Epoch 3/50\n",
+      "804/804 [==============================] - 1s 679us/step - loss: 0.5533 - accuracy: 0.7289\n",
+      "Epoch 4/50\n",
+      "804/804 [==============================] - 1s 653us/step - loss: 0.5511 - accuracy: 0.7302\n",
+      "Epoch 5/50\n",
+      "804/804 [==============================] - 1s 648us/step - loss: 0.5501 - accuracy: 0.7302\n",
+      "Epoch 6/50\n",
+      "804/804 [==============================] - 1s 660us/step - loss: 0.5486 - accuracy: 0.7313\n",
+      "Epoch 7/50\n",
+      "804/804 [==============================] - 1s 651us/step - loss: 0.5485 - accuracy: 0.7320\n",
+      "Epoch 8/50\n",
+      "804/804 [==============================] - 1s 630us/step - loss: 0.5471 - accuracy: 0.7334\n",
+      "Epoch 9/50\n",
+      "804/804 [==============================] - 1s 626us/step - loss: 0.5469 - accuracy: 0.7315\n",
+      "Epoch 10/50\n",
+      "804/804 [==============================] - 1s 638us/step - loss: 0.5462 - accuracy: 0.7328\n",
+      "Epoch 11/50\n",
+      "804/804 [==============================] - 1s 625us/step - loss: 0.5454 - accuracy: 0.7334\n",
+      "Epoch 12/50\n",
+      "804/804 [==============================] - 1s 630us/step - loss: 0.5450 - accuracy: 0.7327\n",
+      "Epoch 13/50\n",
+      "804/804 [==============================] - 1s 627us/step - loss: 0.5436 - accuracy: 0.7348\n",
+      "Epoch 14/50\n",
+      "804/804 [==============================] - 1s 635us/step - loss: 0.5442 - accuracy: 0.7334\n",
+      "Epoch 15/50\n",
+      "804/804 [==============================] - 1s 627us/step - loss: 0.5444 - accuracy: 0.7327\n",
+      "Epoch 16/50\n",
+      "804/804 [==============================] - 1s 622us/step - loss: 0.5431 - accuracy: 0.7338\n",
+      "Epoch 17/50\n",
+      "804/804 [==============================] - 1s 633us/step - loss: 0.5436 - accuracy: 0.7327\n",
+      "Epoch 18/50\n",
+      "804/804 [==============================] - 1s 623us/step - loss: 0.5422 - accuracy: 0.7346\n",
+      "Epoch 19/50\n",
+      "804/804 [==============================] - 1s 622us/step - loss: 0.5426 - accuracy: 0.7352\n",
+      "Epoch 20/50\n",
+      "804/804 [==============================] - 1s 633us/step - loss: 0.5423 - accuracy: 0.7345\n",
+      "Epoch 21/50\n",
+      "804/804 [==============================] - 1s 668us/step - loss: 0.5421 - accuracy: 0.7346\n",
+      "Epoch 22/50\n",
+      "804/804 [==============================] - 1s 644us/step - loss: 0.5422 - accuracy: 0.7340\n",
+      "Epoch 23/50\n",
+      "804/804 [==============================] - 1s 700us/step - loss: 0.5419 - accuracy: 0.7346\n",
+      "Epoch 24/50\n",
+      "804/804 [==============================] - 1s 655us/step - loss: 0.5415 - accuracy: 0.7359\n",
+      "Epoch 25/50\n",
+      "804/804 [==============================] - 1s 638us/step - loss: 0.5417 - accuracy: 0.7351\n",
+      "Epoch 26/50\n",
+      "804/804 [==============================] - 1s 646us/step - loss: 0.5409 - accuracy: 0.7364\n",
+      "Epoch 27/50\n",
+      "804/804 [==============================] - 1s 641us/step - loss: 0.5411 - accuracy: 0.7357\n",
+      "Epoch 28/50\n",
+      "804/804 [==============================] - 1s 664us/step - loss: 0.5407 - accuracy: 0.7354\n",
+      "Epoch 29/50\n",
+      "804/804 [==============================] - 1s 669us/step - loss: 0.5406 - accuracy: 0.7358\n",
+      "Epoch 30/50\n",
+      "804/804 [==============================] - 1s 653us/step - loss: 0.5405 - accuracy: 0.7352\n",
+      "Epoch 31/50\n",
+      "804/804 [==============================] - 1s 650us/step - loss: 0.5403 - accuracy: 0.7365\n",
+      "Epoch 32/50\n",
+      "804/804 [==============================] - 1s 640us/step - loss: 0.5397 - accuracy: 0.7355\n",
+      "Epoch 33/50\n",
+      "804/804 [==============================] - 1s 655us/step - loss: 0.5395 - accuracy: 0.7372\n",
+      "Epoch 34/50\n",
+      "804/804 [==============================] - 1s 637us/step - loss: 0.5397 - accuracy: 0.7365\n",
+      "Epoch 35/50\n",
+      "804/804 [==============================] - 1s 660us/step - loss: 0.5391 - accuracy: 0.7374\n",
+      "Epoch 36/50\n",
+      "804/804 [==============================] - 1s 642us/step - loss: 0.5393 - accuracy: 0.7377\n",
+      "Epoch 37/50\n",
+      "804/804 [==============================] - 1s 642us/step - loss: 0.5393 - accuracy: 0.7366\n",
+      "Epoch 38/50\n",
+      "804/804 [==============================] - 1s 645us/step - loss: 0.5390 - accuracy: 0.7371\n",
+      "Epoch 39/50\n",
+      "804/804 [==============================] - 1s 644us/step - loss: 0.5387 - accuracy: 0.7376\n",
+      "Epoch 40/50\n",
+      "804/804 [==============================] - 1s 639us/step - loss: 0.5382 - accuracy: 0.7377\n",
+      "Epoch 41/50\n",
+      "804/804 [==============================] - 1s 634us/step - loss: 0.5391 - accuracy: 0.7368\n",
+      "Epoch 42/50\n",
+      "804/804 [==============================] - 1s 644us/step - loss: 0.5384 - accuracy: 0.7370\n",
+      "Epoch 43/50\n",
+      "804/804 [==============================] - 1s 643us/step - loss: 0.5379 - accuracy: 0.7372\n",
+      "Epoch 44/50\n",
+      "804/804 [==============================] - 1s 660us/step - loss: 0.5382 - accuracy: 0.7374\n",
+      "Epoch 45/50\n",
+      "804/804 [==============================] - 1s 673us/step - loss: 0.5381 - accuracy: 0.7371\n",
+      "Epoch 46/50\n",
+      "804/804 [==============================] - 1s 664us/step - loss: 0.5381 - accuracy: 0.7370\n",
+      "Epoch 47/50\n",
+      "804/804 [==============================] - 1s 669us/step - loss: 0.5389 - accuracy: 0.7377\n",
+      "Epoch 48/50\n",
+      "804/804 [==============================] - 1s 630us/step - loss: 0.5377 - accuracy: 0.7372\n",
+      "Epoch 49/50\n",
+      "804/804 [==============================] - 1s 633us/step - loss: 0.5376 - accuracy: 0.7364\n",
+      "Epoch 50/50\n",
+      "804/804 [==============================] - 1s 669us/step - loss: 0.5378 - accuracy: 0.7373\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit the model using 50 epochs and the training data\n",
-    "fit_model_A1 = # YOUR CODE HERE\n"
+    "fit_model_A1 = nn_A1.fit(X_train_scaled, y_train, epochs=50)\n"
    ]
   },
   {
@@ -1821,9 +1970,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "116"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the the number of inputs (features) to the model\n",
     "number_input_features = len(X_train.iloc[0])\n",
@@ -1839,17 +1999,28 @@
    "outputs": [],
    "source": [
     "# Define the number of neurons in the output layer\n",
-    "number_output_neurons_A2 = # YOUR CODE HERE"
+    "number_output_neurons_A2 = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the number of hidden nodes for the first hidden layer\n",
-    "hidden_nodes_layer1_A2 = # YOUR CODE HERE\n",
+    "hidden_nodes_layer1_A2 = (number_input_features + 1) // 3\n",
     "\n",
     "# Review the number of hidden nodes in the first layer\n",
     "hidden_nodes_layer1_A2"
@@ -1857,48 +2028,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the Sequential model instance\n",
-    "nn_A2 = # YOUR CODE HERE"
+    "nn_A2 = Sequential()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_5 (Dense)             (None, 58)                6786      \n",
+      "                                                                 \n",
+      " dense_6 (Dense)             (None, 1)                 59        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 6,845\n",
+      "Trainable params: 6,845\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# First hidden layer\n",
-    "# YOUR CODE HERE\n",
+    "nn_A2.add(Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"relu\"))\n",
+    "\n",
     "\n",
     "# Output layer\n",
-    "# YOUR CODE HERE\n",
+    "nn_A2.add(Dense(units=1, activation=\"linear\"))\n",
+    "\n",
     "\n",
     "# Check the structure of the model\n",
-    "# YOUR CODE HERE\n"
+    "nn_A2.summary()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compile the model\n",
-    "# YOUR CODE HERE\n"
+    "nn_A2.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/35\n",
+      "804/804 [==============================] - 1s 700us/step - loss: 2.0348 - accuracy: 0.6452\n",
+      "Epoch 2/35\n",
+      "804/804 [==============================] - 1s 684us/step - loss: 1.2116 - accuracy: 0.6930\n",
+      "Epoch 3/35\n",
+      "804/804 [==============================] - 1s 671us/step - loss: 1.1065 - accuracy: 0.6980\n",
+      "Epoch 4/35\n",
+      "804/804 [==============================] - 1s 664us/step - loss: 1.0288 - accuracy: 0.7047\n",
+      "Epoch 5/35\n",
+      "804/804 [==============================] - 1s 680us/step - loss: 1.3569 - accuracy: 0.6880\n",
+      "Epoch 6/35\n",
+      "804/804 [==============================] - 1s 720us/step - loss: 1.1441 - accuracy: 0.6999\n",
+      "Epoch 7/35\n",
+      "804/804 [==============================] - 1s 658us/step - loss: 1.1196 - accuracy: 0.7040\n",
+      "Epoch 8/35\n",
+      "804/804 [==============================] - 1s 653us/step - loss: 1.2014 - accuracy: 0.6891\n",
+      "Epoch 9/35\n",
+      "804/804 [==============================] - 1s 664us/step - loss: 0.9349 - accuracy: 0.7053\n",
+      "Epoch 10/35\n",
+      "804/804 [==============================] - 1s 640us/step - loss: 0.9589 - accuracy: 0.7107\n",
+      "Epoch 11/35\n",
+      "804/804 [==============================] - 1s 661us/step - loss: 0.9426 - accuracy: 0.7131\n",
+      "Epoch 12/35\n",
+      "804/804 [==============================] - 1s 710us/step - loss: 0.9384 - accuracy: 0.7175\n",
+      "Epoch 13/35\n",
+      "804/804 [==============================] - 1s 666us/step - loss: 1.0502 - accuracy: 0.7065\n",
+      "Epoch 14/35\n",
+      "804/804 [==============================] - 1s 644us/step - loss: 1.1494 - accuracy: 0.7023\n",
+      "Epoch 15/35\n",
+      "804/804 [==============================] - 1s 646us/step - loss: 1.1742 - accuracy: 0.6872\n",
+      "Epoch 16/35\n",
+      "804/804 [==============================] - 1s 643us/step - loss: 1.1475 - accuracy: 0.7011\n",
+      "Epoch 17/35\n",
+      "804/804 [==============================] - 1s 671us/step - loss: 1.0698 - accuracy: 0.7039\n",
+      "Epoch 18/35\n",
+      "804/804 [==============================] - 1s 664us/step - loss: 0.7666 - accuracy: 0.7243\n",
+      "Epoch 19/35\n",
+      "804/804 [==============================] - 1s 651us/step - loss: 0.7494 - accuracy: 0.7252\n",
+      "Epoch 20/35\n",
+      "804/804 [==============================] - 1s 658us/step - loss: 0.7546 - accuracy: 0.7189\n",
+      "Epoch 21/35\n",
+      "804/804 [==============================] - 1s 665us/step - loss: 0.7240 - accuracy: 0.7269\n",
+      "Epoch 22/35\n",
+      "804/804 [==============================] - 1s 656us/step - loss: 0.7244 - accuracy: 0.7251\n",
+      "Epoch 23/35\n",
+      "804/804 [==============================] - 1s 653us/step - loss: 0.7400 - accuracy: 0.7295\n",
+      "Epoch 24/35\n",
+      "804/804 [==============================] - 1s 653us/step - loss: 0.7289 - accuracy: 0.7298\n",
+      "Epoch 25/35\n",
+      "804/804 [==============================] - 1s 649us/step - loss: 0.7316 - accuracy: 0.7278\n",
+      "Epoch 26/35\n",
+      "804/804 [==============================] - 1s 660us/step - loss: 0.7135 - accuracy: 0.7276\n",
+      "Epoch 27/35\n",
+      "804/804 [==============================] - 1s 650us/step - loss: 0.7038 - accuracy: 0.7302\n",
+      "Epoch 28/35\n",
+      "804/804 [==============================] - 1s 646us/step - loss: 0.7320 - accuracy: 0.7271\n",
+      "Epoch 29/35\n",
+      "804/804 [==============================] - 1s 663us/step - loss: 0.7939 - accuracy: 0.7185\n",
+      "Epoch 30/35\n",
+      "804/804 [==============================] - 1s 666us/step - loss: 0.7588 - accuracy: 0.7241\n",
+      "Epoch 31/35\n",
+      "804/804 [==============================] - 1s 656us/step - loss: 0.7247 - accuracy: 0.7258\n",
+      "Epoch 32/35\n",
+      "804/804 [==============================] - 1s 658us/step - loss: 0.6913 - accuracy: 0.7304\n",
+      "Epoch 33/35\n",
+      "804/804 [==============================] - 1s 689us/step - loss: 0.7276 - accuracy: 0.7285\n",
+      "Epoch 34/35\n",
+      "804/804 [==============================] - 1s 669us/step - loss: 0.7111 - accuracy: 0.7295\n",
+      "Epoch 35/35\n",
+      "804/804 [==============================] - 1s 684us/step - loss: 0.7431 - accuracy: 0.7241\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit the model\n",
-    "# YOUR CODE HERE\n"
+    "fit_model_A2 = nn_A2.fit(X_train_scaled, y_train, epochs=35)\n"
    ]
   },
   {
