--- a/Instructions/Starter_Code/venture_funding_with_deep_learning.ipynb
+++ b/Instructions/Starter_Code/venture_funding_with_deep_learning.ipynb
@@ -2180,14 +2180,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Model Results\n",
+      "268/268 - 0s - loss: 0.5565 - accuracy: 0.7303 - 157ms/epoch - 586us/step\n",
+      "Loss: 0.5564708113670349, Accuracy: 0.7302623987197876\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Original Model Results\")\n",
     "\n",
     "# Evaluate the model loss and accuracy metrics using the evaluate method and the test data\n",
-    "model_loss, model_accuracy = # YOUR CODE HERE\n",
+    "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
     "\n",
     "# Display the model loss and accuracy results\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
@@ -2195,29 +2205,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alternative Model 1 Results\n",
+      "268/268 - 0s - loss: 0.5585 - accuracy: 0.7292 - 160ms/epoch - 597us/step\n",
+      "Loss: 0.558525562286377, Accuracy: 0.7292128205299377\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Alternative Model 1 Results\")\n",
     "\n",
     "# Evaluate the model loss and accuracy metrics using the evaluate method and the test data\n",
-    "model_loss, model_accuracy =# YOUR CODE HERE\n",
-    "\n",
+    "model_loss, model_accuracy = nn_A1.evaluate(X_test_scaled,y_test,verbose=2)\n",
     "# Display the model loss and accuracy results\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alternative Model 2 Results\n",
+      "268/268 - 0s - loss: 0.7189 - accuracy: 0.7270 - 228ms/epoch - 851us/step\n",
+      "Loss: 0.718920111656189, Accuracy: 0.7269970774650574\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Alternative Model 2 Results\")\n",
     "\n",
     "# Evaluate the model loss and accuracy metrics using the evaluate method and the test data\n",
-    "model_loss, model_accuracy = # YOUR CODE HERE\n",
+    "model_loss, model_accuracy = nn_A2.evaluate(X_test_scaled,y_test,verbose=2)\n",
     "\n",
     "# Display the model loss and accuracy results\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
@@ -2232,28 +2261,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the file path for the first alternative model\n",
-    "file_path = # YOUR CODE HERE\n",
+    "file_path = Path(\"Resources/applicants_data_nn1.h5\")\n",
     "\n",
-    "# Export your model to a HDF5 file\n",
-    "# YOUR CODE HERE\n"
+    "# Export your model to an HDF5 file\n",
+    "nn_A1.save(file_path)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the file path for the second alternative model\n",
-    "file_path = # YOUR CODE HERE\n",
+    "file_path = Path(\"Resources/applicants_data_nn2.h5\")\n",
     "\n",
-    "# Export your model to a HDF5 file\n",
-    "# YOUR CODE HERE\n"
+    "# Export your model to an HDF5 file\n",
+    "nn_A2.save(file_path)"
    ]
   },
   {
